fix(notes): remove global h2 style causing title misalignment

--- a/src/entities/notes/ui/NoteItem/NoteItem.scss
+++ b/src/entities/notes/ui/NoteItem/NoteItem.scss
@@ -110,13 +110,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
     margin-top: auto;
 
     svg {
-      width: 24px;
-      height: 24px;
+      width: 20px;
+      height: 20px;
     }
   }
-
 }
